[project]
name = "rps"
version = "0.1.0"
requires-python = ">=3.10,<3.15"
dependencies = ["duckdb>=0.10", "pandas>=2.0", "pyyaml>=6.0", "click>=8.0", "streamlit>=1.30", "plotly>=5.0", "akshare>=1.10"]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["rps*"]
